[gd_scene load_steps=84 format=3 uid="uid://bwxgkthlps6ok"]

[ext_resource type="Script" uid="uid://b0hd7n8qn2to8" path="res://Scripts/Player.gd" id="1_0k4xd"]
[ext_resource type="PackedScene" uid="uid://b1m5ceuy6vibl" path="res://Scenes/PlayerShot.tscn" id="2_glx4g"]
[ext_resource type="Texture2D" uid="uid://b5ssi5a46v68" path="res://Assets/Player/Idle_Strip5.png" id="2_gntrk"]
[ext_resource type="Texture2D" uid="uid://u123htownku7" path="res://Assets/Player/Dash_Strip4.png" id="2_megsn"]
[ext_resource type="Texture2D" uid="uid://b2xk81btocns7" path="res://Assets/Player/Jump_Strip6.png" id="3_5ixxa"]
[ext_resource type="Texture2D" uid="uid://b3qc7bhcv1av7" path="res://Assets/Player/Walk_Strip11.png" id="3_dewec"]
[ext_resource type="Texture2D" uid="uid://ckyjgeidxxerr" path="res://Assets/Player/Dash_Shoot_Strip4.png" id="3_yoq75"]
[ext_resource type="Texture2D" uid="uid://bdpxiqs28bc10" path="res://Assets/Player/Jump_Shoot_Strip6.png" id="4_5ixxa"]
[ext_resource type="Texture2D" uid="uid://csw17m81ntrig" path="res://Assets/Player/Fall_Strip6.png" id="4_yoq75"]
[ext_resource type="Texture2D" uid="uid://dxwxo60eaaqd7" path="res://Assets/Player/Fall_Shoot_Strip1.png" id="6_miouo"]
[ext_resource type="Texture2D" uid="uid://12hb4el6xp2d" path="res://Assets/Player/Walk_Shoot_Strip11.png" id="6_nn08x"]
[ext_resource type="Texture2D" uid="uid://dv5ph60j8ekw5" path="res://Assets/Player/Shoot_Strip6.png" id="7_ksbbd"]
[ext_resource type="Texture2D" uid="uid://ufmojljhxrf6" path="res://Assets/Player/Wall_Slide_Strip1.png" id="11_ksbbd"]
[ext_resource type="Texture2D" uid="uid://cmf3ud5ksfs7j" path="res://Assets/Resources/Charge_Strip7.png" id="14_o3h8g"]
[ext_resource type="AudioStream" uid="uid://bmf5gl45kfa8l" path="res://Assets/Resources/sfx/JumpSound.wav" id="15_1e7my"]
[ext_resource type="AudioStream" uid="uid://tga28g1aox4b" path="res://Assets/Resources/sfx/DashSound.wav" id="16_1iu4k"]
[ext_resource type="AudioStream" uid="uid://cq5kxqk8dod5i" path="res://Assets/Resources/sfx/LandSound.wav" id="17_m0x7a"]
[ext_resource type="AudioStream" uid="uid://cmxeegublo2gg" path="res://Assets/Resources/sfx/ShotSound.wav" id="18_5v66d"]
[ext_resource type="AudioStream" uid="uid://cutn168ivcmjs" path="res://Assets/Resources/sfx/ChargeSound.wav" id="19_x63xi"]
[ext_resource type="AudioStream" uid="uid://di0pndvqlsu7n" path="res://Assets/Resources/sfx/ChargeLoopSound.mp3" id="20_m0x7a"]

[sub_resource type="AtlasTexture" id="AtlasTexture_vmcrb"]
atlas = ExtResource("2_megsn")
region = Rect2(0, 0, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_teras"]
atlas = ExtResource("2_megsn")
region = Rect2(48, 0, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_8p516"]
atlas = ExtResource("2_megsn")
region = Rect2(96, 0, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_fvoow"]
atlas = ExtResource("2_megsn")
region = Rect2(144, 0, 48, 40)

[sub_resource type="AtlasTexture" id="AtlasTexture_v5fqo"]
atlas = ExtResource("3_yoq75")
region = Rect2(0, 0, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_yf17c"]
atlas = ExtResource("3_yoq75")
region = Rect2(48, 0, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_awd2i"]
atlas = ExtResource("3_yoq75")
region = Rect2(96, 0, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_o2sks"]
atlas = ExtResource("3_yoq75")
region = Rect2(144, 0, 48, 46)

[sub_resource type="AtlasTexture" id="AtlasTexture_5ixxa"]
atlas = ExtResource("2_gntrk")
region = Rect2(0, 0, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_nn08x"]
atlas = ExtResource("2_gntrk")
region = Rect2(32, 0, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_52ee3"]
atlas = ExtResource("2_gntrk")
region = Rect2(64, 0, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_bhhdu"]
atlas = ExtResource("2_gntrk")
region = Rect2(96, 0, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_megsn"]
atlas = ExtResource("2_gntrk")
region = Rect2(128, 0, 32, 39)

[sub_resource type="AtlasTexture" id="AtlasTexture_5v66d"]
atlas = ExtResource("3_5ixxa")
region = Rect2(0, 0, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_x63xi"]
atlas = ExtResource("3_5ixxa")
region = Rect2(32, 0, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_i2e8t"]
atlas = ExtResource("3_5ixxa")
region = Rect2(64, 0, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_qidb7"]
atlas = ExtResource("3_5ixxa")
region = Rect2(96, 0, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_70hv0"]
atlas = ExtResource("3_5ixxa")
region = Rect2(128, 0, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_8flut"]
atlas = ExtResource("3_5ixxa")
region = Rect2(160, 0, 32, 54)

[sub_resource type="AtlasTexture" id="AtlasTexture_u7x0b"]
atlas = ExtResource("4_5ixxa")
region = Rect2(0, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_utwlt"]
atlas = ExtResource("4_5ixxa")
region = Rect2(48, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_kih0c"]
atlas = ExtResource("4_5ixxa")
region = Rect2(96, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_lyrkg"]
atlas = ExtResource("4_5ixxa")
region = Rect2(144, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_c43xd"]
atlas = ExtResource("4_5ixxa")
region = Rect2(192, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_avx33"]
atlas = ExtResource("4_5ixxa")
region = Rect2(240, 0, 48, 48)

[sub_resource type="AtlasTexture" id="AtlasTexture_3rw25"]
atlas = ExtResource("7_ksbbd")
region = Rect2(0, 0, 48, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_u4y2r"]
atlas = ExtResource("7_ksbbd")
region = Rect2(48, 0, 48, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_tbv6f"]
atlas = ExtResource("7_ksbbd")
region = Rect2(96, 0, 48, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_vp15a"]
atlas = ExtResource("7_ksbbd")
region = Rect2(144, 0, 48, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_fayk8"]
atlas = ExtResource("7_ksbbd")
region = Rect2(192, 0, 48, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_ddly5"]
atlas = ExtResource("7_ksbbd")
region = Rect2(240, 0, 48, 50)

[sub_resource type="AtlasTexture" id="AtlasTexture_yoq75"]
atlas = ExtResource("3_dewec")
region = Rect2(0, 0, 48, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ksbbd"]
atlas = ExtResource("3_dewec")
region = Rect2(48, 0, 48, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_glx4g"]
atlas = ExtResource("3_dewec")
region = Rect2(96, 0, 48, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_miouo"]
atlas = ExtResource("3_dewec")
region = Rect2(144, 0, 48, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_o3h8g"]
atlas = ExtResource("3_dewec")
region = Rect2(192, 0, 48, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_1e7my"]
atlas = ExtResource("3_dewec")
region = Rect2(240, 0, 48, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_arntx"]
atlas = ExtResource("3_dewec")
region = Rect2(288, 0, 48, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_lslt6"]
atlas = ExtResource("3_dewec")
region = Rect2(336, 0, 48, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_ulo2v"]
atlas = ExtResource("3_dewec")
region = Rect2(384, 0, 48, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_1iu4k"]
atlas = ExtResource("3_dewec")
region = Rect2(432, 0, 48, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_m0x7a"]
atlas = ExtResource("3_dewec")
region = Rect2(480, 0, 48, 38)

[sub_resource type="AtlasTexture" id="AtlasTexture_rxg2u"]
atlas = ExtResource("6_nn08x")
region = Rect2(0, 0, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_xixlo"]
atlas = ExtResource("6_nn08x")
region = Rect2(48, 0, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_bfbt0"]
atlas = ExtResource("6_nn08x")
region = Rect2(96, 0, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_wosd6"]
atlas = ExtResource("6_nn08x")
region = Rect2(144, 0, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_hkrn1"]
atlas = ExtResource("6_nn08x")
region = Rect2(192, 0, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_wpo1r"]
atlas = ExtResource("6_nn08x")
region = Rect2(240, 0, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_pqity"]
atlas = ExtResource("6_nn08x")
region = Rect2(288, 0, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_opqna"]
atlas = ExtResource("6_nn08x")
region = Rect2(336, 0, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_00okb"]
atlas = ExtResource("6_nn08x")
region = Rect2(384, 0, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_6hr71"]
atlas = ExtResource("6_nn08x")
region = Rect2(432, 0, 48, 41)

[sub_resource type="AtlasTexture" id="AtlasTexture_y6y60"]
atlas = ExtResource("6_nn08x")
region = Rect2(480, 0, 48, 41)

[sub_resource type="SpriteFrames" id="SpriteFrames_5v66d"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_vmcrb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_teras")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8p516")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fvoow")
}],
"loop": false,
"name": &"Dash",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_v5fqo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yf17c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_awd2i")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o2sks")
}],
"loop": false,
"name": &"Dash_Shoot",
"speed": 12.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("4_yoq75")
}],
"loop": true,
"name": &"Fall",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("6_miouo")
}],
"loop": true,
"name": &"Fall_Shoot",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5ixxa")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_nn08x")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_52ee3")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bhhdu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_megsn")
}],
"loop": true,
"name": &"Idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_5v66d")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_x63xi")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_i2e8t")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_qidb7")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_70hv0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_8flut")
}],
"loop": false,
"name": &"Jump",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_u7x0b")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_utwlt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_kih0c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lyrkg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c43xd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_avx33")
}],
"loop": false,
"name": &"Jump_Shoot",
"speed": 10.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_3rw25")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_u4y2r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_tbv6f")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vp15a")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_fayk8")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ddly5")
}],
"loop": true,
"name": &"Shoot",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_yoq75")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ksbbd")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_glx4g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_miouo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_o3h8g")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1e7my")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_arntx")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lslt6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ulo2v")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1iu4k")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m0x7a")
}],
"loop": false,
"name": &"Walk",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_rxg2u")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xixlo")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_bfbt0")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wosd6")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_hkrn1")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wpo1r")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pqity")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_opqna")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_00okb")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_6hr71")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_y6y60")
}],
"loop": true,
"name": &"Walk_Shoot",
"speed": 11.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("11_ksbbd")
}],
"loop": true,
"name": &"Wall_Slide",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_omi2y"]
atlas = ExtResource("14_o3h8g")
region = Rect2(0, 0, 111, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_75iyv"]
atlas = ExtResource("14_o3h8g")
region = Rect2(111, 0, 111, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_yrofn"]
atlas = ExtResource("14_o3h8g")
region = Rect2(222, 0, 111, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_5gg6q"]
atlas = ExtResource("14_o3h8g")
region = Rect2(333, 0, 111, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_wenux"]
atlas = ExtResource("14_o3h8g")
region = Rect2(444, 0, 111, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_vy33c"]
atlas = ExtResource("14_o3h8g")
region = Rect2(555, 0, 111, 111)

[sub_resource type="AtlasTexture" id="AtlasTexture_h1ppb"]
atlas = ExtResource("14_o3h8g")
region = Rect2(666, 0, 111, 111)

[sub_resource type="SpriteFrames" id="SpriteFrames_k22kr"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_omi2y")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_75iyv")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_yrofn")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_5gg6q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_wenux")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_vy33c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_h1ppb")
}],
"loop": true,
"name": &"default",
"speed": 15.0
}]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_x63xi"]
size = Vector2(18, 36)

[node name="Player" type="CharacterBody2D"]
collision_mask = 2
script = ExtResource("1_0k4xd")
PlayerShotScene = ExtResource("2_glx4g")

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(24, -24)
sprite_frames = SubResource("SpriteFrames_5v66d")
animation = &"Jump_Shoot"
autoplay = "Idle"

[node name="ChargeEffectSprite" type="AnimatedSprite2D" parent="."]
visible = false
position = Vector2(24, -24)
sprite_frames = SubResource("SpriteFrames_k22kr")

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(24, -19)
shape = SubResource("RectangleShape2D_x63xi")

[node name="ShotSpawnPoints" type="Node2D" parent="."]
position = Vector2(40, -24)

[node name="ShotSpawnIdle" type="Marker2D" parent="ShotSpawnPoints"]
position = Vector2(0, -2)

[node name="ShotSpawnJump" type="Marker2D" parent="ShotSpawnPoints"]
position = Vector2(4, -7)

[node name="ShotSpawnDash" type="Marker2D" parent="ShotSpawnPoints"]
position = Vector2(9, 0)

[node name="ShotSpawnWalk" type="Marker2D" parent="ShotSpawnPoints"]
position = Vector2(0, -2)

[node name="AudioPlayers" type="Node2D" parent="."]

[node name="JumpSound" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("15_1e7my")

[node name="DashSound" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("16_1iu4k")

[node name="LandSound" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("17_m0x7a")

[node name="ShotSound" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("18_5v66d")

[node name="ChargeSound" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("19_x63xi")
volume_db = -15.928

[node name="ChargeLoopSound" type="AudioStreamPlayer" parent="AudioPlayers"]
stream = ExtResource("20_m0x7a")
volume_db = -15.928
